--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:push": "drizzle-kit push:pg --config=drizzle.config.ts",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@emotion/cache": "^11.11.0",
@@ -17,6 +19,8 @@
     "@neondatabase/serverless": "^0.9.3",
     "drizzle-orm": "^0.30.10",
     "next": "14.2.3",
+    "pg": "^8.11.5",
+    "postgres": "^3.4.4",
     "react": "^18.2.0",
     "react-dom": "^18"
   },
