--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@neondatabase/serverless": "^0.9.3",
     "drizzle-orm": "^0.30.10",
     "next": "14.2.3",
+    "next-auth": "^5.0.0-beta.18",
     "pg": "^8.11.5",
     "postgres": "^3.4.4",
     "react": "^18.2.0",
