--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
     "pg": "^8.11.5",
-    "postgres": "^3.4.4",
+    "postgres": "3.3",
     "react": "^18.2.0",
     "react-dom": "^18"
   },
