--- a/package.json
+++ b/package.json
@@ -23,16 +23,15 @@
     "@mui/material-nextjs": "^5.15.11",
     "@neondatabase/serverless": "^0.9.3",
     "drizzle-orm": "^0.30.10",
-    "next": "14.2.3",
+    "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.18",
     "pg": "^8.11.5",
     "postgres": "3.3",
-    "react": "^18.2.0",
-    "react-dom": "^18"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "cypress": "^13.10.0",
-    "drizzle-kit": "^0.21.2",
+    "drizzle-kit": "^0.21.4",
     "eslint": "^8",
     "eslint-config-next": "14.2.3"
   }
