--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/material": "^5.15.18",
     "@mui/material-nextjs": "^5.15.11",
     "@neondatabase/serverless": "^0.9.3",
+    "@testing-library/react": "^15.0.7",
     "drizzle-orm": "^0.30.10",
     "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.18",
