--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.18",
     "pg": "^8.11.5",
-    "postgres": "3.3",
+    "postgres": "^3.3.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "stripe": "^15.8.0"
   },
   "devDependencies": {
     "coverage": "^0.4.1",
