--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/material": "^5.15.18",
     "@mui/material-nextjs": "^5.15.11",
     "@neondatabase/serverless": "^0.9.3",
+    "@octokit/rest": "^20.1.1",
     "@stripe/react-stripe-js": "^2.7.1",
     "@stripe/stripe-js": "^3.4.1",
     "@testing-library/react": "^15.0.7",
