--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mui/material": "^5.15.18",
     "@mui/material-nextjs": "^5.15.11",
     "@neondatabase/serverless": "^0.9.3",
+    "@octokit/app": "^15.1.0",
     "@octokit/rest": "^20.1.1",
     "@stripe/react-stripe-js": "^2.7.1",
     "@stripe/stripe-js": "^3.4.1",
