--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@google-cloud/vertexai": "^1.2.0",
     "@google/generative-ai": "^0.12.0",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
