--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently 'next dev' 'quirrel'",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -26,15 +26,18 @@
     "@mui/material-nextjs": "^5.15.11",
     "@neondatabase/serverless": "^0.9.3",
     "@octokit/app": "^15.1.0",
+    "@octokit/auth-app": "^7.1.0",
     "@octokit/rest": "^20.1.1",
     "@stripe/react-stripe-js": "^2.7.1",
     "@stripe/stripe-js": "^3.4.1",
     "@testing-library/react": "^15.0.7",
+    "concurrently": "^8.2.2",
     "drizzle-orm": "^0.30.10",
     "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.18",
     "pg": "^8.11.5",
     "postgres": "^3.3.5",
+    "quirrel": "^1.14.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "stripe": "^15.8.0"
